--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.119",
+    "@types/node": "^10.12.18",
+    "@types/shelljs": "^0.8.1",
+    "@types/superagent": "^3.8.5",
     "lodash": "^4.17.11",
     "shelljs": "^0.8.3",
-    "superagent": "^4.0.0"
+    "superagent": "^4.0.0",
+    "superagent-proxy": "^2.0.0"
   }
 }
